--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta
       name="description"
@@ -36,77 +33,158 @@
 
     <!-- Search box container -->
     <div class="searchBoxContainer">
-      <h1 class="defaultWhite">Search Any Email Address</h1>
+      <h1 class="defaultWhite centerText">Search Any Email Address</h1>
 
-      <div id="sameLine">
+      <div id="sameLine" class="centerText">
         <h4 class="primaryYellow">Start Here</h4>
+
         <h4 class="defaultWhite">
           - Look up the owner's name, photos and online profiles. See what you
           find!
         </h4>
       </div>
 
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="EMAIL" />
-
-        <button type="button" class="btn rounded">GO!</button>
+      <div class="input-group formContainer">
+        <div class="col-10">
+          <input type="text" class="form-control" placeholder="EMAIL" />
+        </div>
+        <div class="col-1">
+          <button type="button" class="btn rounded">GO!</button>
+        </div>
       </div>
 
       <div id="sameLine">
-        <img src="assets/SVGs/lock.svg" alt="lock" />
-
-        <h5 class="primaryYellow">
-          Enter Any Email Address. They won't be notified.
-        </h5>
+        <div class="row">
+          <div class="col-2"></div>
+          <div class="col-8">
+            <img src="assets/SVGs/lock.svg" alt="lock" />
+            <h6 class="primaryYellow">
+              Enter Any Email Address. They won't be notified.
+            </h6>
+          </div>
+        </div>
       </div>
     </div>
 
     <!-- Additional information container -->
     <div class="additionalInfoContainer">
-      <h1 class="primaryBlue">Reverse Email Lookup</h1>
+      <h1 class="centerText primaryBlue">Reverse Email Lookup</h1>
 
-      <p>
+      <p class="centerText secondaryTextColor">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
         commodo consequat.
       </p>
 
-      <div class="container">
+      <div class="infoContainer container">
         <div class="row">
           <div class="col-sm">
-            <h3 class="spacing2">Lorem Ipsum</h3>
+            <div class="row">
+              <div class="circle">1</div>
+              <div class="col-sm">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </div>
+            </div>
           </div>
 
           <div class="col-sm">
-            <h3 class="spacing2">Lorem Ipsum</h3>
+            <div class="row">
+              <div class="circle">4</div>
+              <div class="col-sm">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col-sm">
-            <h3 class="spacing2">Lorem Ipsum</h3>
+            <div class="row">
+              <div class="circle">2</div>
+              <div class="col-sm">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </div>
+            </div>
           </div>
 
           <div class="col-sm">
-            <h3 class="spacing2">Lorem Ipsum</h3>
+            <div class="row">
+              <div class="circle">4</div>
+              <div class="col-sm">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col-sm">
-            <h3 class="spacing2">Lorem Ipsum</h3>
+            <div class="row">
+              <div class="circle">3</div>
+              <div class="col-sm">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </div>
+            </div>
           </div>
 
           <div class="col-sm">
-            <h3 class="spacing2">Lorem Ipsum</h3>
+            <div class="row">
+              <div class="circle">6</div>
+              <div class="col-sm">
+                <h4>Lorem Ipsum</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
     <!-- Placeholder to load footer from a script -->
-    <footer id="footerPlaceHolder"></footer>
+    <footer id="footerPlaceHolder">
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-8">
+          <p class="footerTextColor">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+
+        <div class="col-1"></div>
+        <div id="sameLine" class="primaryBlue">
+          <a href="#">Terms</a>
+          <p>|</p>
+          <a href="#">Privacy</a>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
