--- a/nav-header.html
+++ b/nav-header.html
@@ -1,5 +1,21 @@
-<nav class="navbar navbar-custom">
-  <a class="navbar-brand" href="index.html">
-    <img src="assets/PNGs/Logo@2x.png" alt="logo" />
-  </a>
+<nav class="navbar navbar-expand navbar-custom static-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">
+      <img src="assets/PNGs/Logo@2x.png" alt="logo" />
+    </a>
+
+    <ul class="navbar-nav navbar-right">
+      <li class="nav-item">
+        <a href="#">
+          <img src="assets/SVGs/icn_search.svg" alt="search icon" />
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a href="#">
+          <img src="assets/SVGs/icn_person.svg" alt="person icon" />
+        </a>
+      </li>
+    </ul>
+  </div>
 </nav>
