--- a/results.html
+++ b/results.html
@@ -95,31 +95,12 @@
         </div>
       </div>
 
-      <!-- Search container -->
-      <div></div>
+      <!-- Search box container -->
+      <div id="searchBoxContainer" class="searchBoxContainer"></div>
     </main>
 
     <!-- Placeholder to load footer from a script -->
-    <footer id="footerPlaceHolder">
-      <div class="row">
-        <div class="col-1"></div>
-        <div class="col-8">
-          <p class="footerTextColor">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
-
-        <div class="col-1"></div>
-        <div id="sameLine" class="primaryBlue">
-          <a href="#">Terms</a>
-          <p>|</p>
-          <a href="#">Privacy</a>
-        </div>
-      </div>
-    </footer>
+    <footer id="footerPlaceHolder"></footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -145,8 +126,9 @@
     ></script>
 
     <script src="js/jquery.validate.js"></script>
-    <script src="js/loadHeaderAndFooter.js"></script>
+    <script src="js/loadElements.js"></script>
     <script src="js/validateEmailForm.js"></script>
+    <script src="js/loadSearchBox.js"></script>
     <script src="js/loadResults.js"></script>
   </body>
 </html>
