--- a/index.html
+++ b/index.html
@@ -25,62 +25,9 @@
     <!-- Placeholder for loading navigation bar from script -->
     <header id="navPlaceholder"></header>
 
-    <nav class="navbar navbar-custom">
-      <a class="navbar-brand" href="index.html">
-        <img src="assets/PNGs/Logo@2x.png" alt="logo" />
-      </a>
-    </nav>
-
     <main>
       <!-- Search box container -->
-      <div id="searchBoxContainer" class="searchBoxContainer">
-        <h1 class="defaultWhite centerText">Search Any Email Address</h1>
-
-        <div id="sameLine" class="centerText">
-          <h4 class="primaryYellow">Start Here</h4>
-
-          <h4 class="defaultWhite">
-            - Look up the owner's name, photos and online profiles. See what you
-            find!
-          </h4>
-        </div>
-
-        <!-- Input form -->
-        <form id="emailForm" action="" onsubmit="">
-          <div class="formContainer row form-group">
-            <div class="col-10">
-              <input
-                id="email"
-                class="form-control emailInput"
-                name="email"
-                type="email"
-                placeholder="EMAIL"
-              />
-            </div>
-            <div class="col-1">
-              <button
-                type="submit"
-                value="Submit"
-                class="btn btn-custom rounded"
-              >
-                GO!
-              </button>
-            </div>
-          </div>
-        </form>
-
-        <div id="sameLine">
-          <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-              <img src="assets/SVGs/lock.svg" alt="lock" />
-              <h6 class="primaryYellow">
-                Enter Any Email Address. They won't be notified.
-              </h6>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="searchBoxContainer" class="searchBoxContainer"></div>
 
       <!-- Additional information container -->
       <div id="additionalInfoContainer" class="additionalInfoContainer">
@@ -203,26 +150,7 @@
     </main>
 
     <!-- Placeholder to load footer from a script -->
-    <footer id="footerPlaceHolder">
-      <div class="row">
-        <div class="col-1"></div>
-        <div class="col-8">
-          <p class="footerTextColor">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
-        </div>
-
-        <div class="col-1"></div>
-        <div id="sameLine" class="primaryBlue">
-          <a href="#">Terms</a>
-          <p>|</p>
-          <a href="#">Privacy</a>
-        </div>
-      </div>
-    </footer>
+    <footer id="footerPlaceHolder"></footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -248,7 +176,8 @@
     ></script>
 
     <script src="js/jquery.validate.js"></script>
-    <script src="js/loadHeaderAndFooter.js"></script>
+    <script src="js/loadElements.js"></script>
     <script src="js/validateEmailForm.js"></script>
+    <script src="js/loadSearchBox.js"></script>
   </body>
 </html>
