--- a/results.html
+++ b/results.html
@@ -96,7 +96,53 @@
       </div>
 
       <!-- Search box container -->
-      <div id="searchBoxContainer" class="searchBoxContainer"></div>
+      <div id="searchBoxContainerId" class="searchBoxContainer">
+        <h1 id="searchText" class="defaultWhite centerText">
+          "Can’t Find The Right Person?"
+        </h1>
+
+        <div id="sameLine" class="centerText">
+          <h4 id="searchHint" class="primaryYellow">"Try Again"</h4>
+
+          <h4 id="searchInfo" class="defaultWhite">"- Make a new search"</h4>
+        </div>
+
+        <!-- Input form -->
+        <form id="emailForm" action="" onsubmit="">
+          <div class="formContainer row form-group">
+            <div class="col-10">
+              <input
+                id="email"
+                class="form-control emailInput"
+                name="email"
+                type="email"
+                placeholder="EMAIL"
+              />
+            </div>
+            <div class="col-1">
+              <button
+                type="submit"
+                value="Submit"
+                class="btn btn-custom rounded"
+              >
+                GO!
+              </button>
+            </div>
+          </div>
+        </form>
+
+        <div id="sameLine">
+          <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+              <img src="assets/SVGs/lock.svg" alt="lock" />
+              <h6 class="primaryYellow">
+                Enter Any Email Address. They won't be notified.
+              </h6>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <!-- Placeholder to load footer from a script -->
@@ -104,12 +150,6 @@
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
@@ -128,7 +168,8 @@
     <script src="js/jquery.validate.js"></script>
     <script src="js/loadElements.js"></script>
     <script src="js/validateEmailForm.js"></script>
-    <script src="js/loadSearchBox.js"></script>
+    <!-- <script src="js/loadSearchBox.js"></script> -->
+
     <script src="js/loadResults.js"></script>
   </body>
 </html>
