Refactoring to search
Loads search container dynamically.

--- a/index.html
+++ b/index.html
@@ -28,17 +28,12 @@
     <main>
       <!-- Search box container -->
       <div id="searchBoxContainerId" class="searchBoxContainer">
-        <h1 id="searchText" class="defaultWhite centerText">
-          Search Any Email Address
-        </h1>
+        <h1 id="searchText" class="defaultWhite centerText"></h1>
 
         <div id="sameLine" class="centerText">
-          <h4 id="searchHint" class="primaryYellow">"Start Here"</h4>
+          <h4 id="searchHint" class="primaryYellow"></h4>
 
-          <h4 id="searchInfo" class="defaultWhite">
-            "- Look up the owner's name, photos and online profiles. See what
-            you find!"
-          </h4>
+          <h4 id="searchInfo" class="defaultWhite"></h4>
         </div>
 
         <!-- Input form -->
@@ -220,7 +215,7 @@
 
     <script src="js/jquery.validate.js"></script>
     <script src="js/loadElements.js"></script>
-    <!-- <script src="js/loadSearchBox.js"></script> -->
+    <script src="js/loadSearchBox.js"></script>
     <script src="js/validateEmailForm.js"></script>
   </body>
 </html>
