--- a/results.html
+++ b/results.html
@@ -97,14 +97,12 @@
 
       <!-- Search box container -->
       <div id="searchBoxContainerId" class="searchBoxContainer">
-        <h1 id="searchText" class="defaultWhite centerText">
-          "Can’t Find The Right Person?"
-        </h1>
+        <h1 id="searchText" class="defaultWhite centerText"></h1>
 
         <div id="sameLine" class="centerText">
-          <h4 id="searchHint" class="primaryYellow">"Try Again"</h4>
+          <h4 id="searchHint" class="primaryYellow"></h4>
 
-          <h4 id="searchInfo" class="defaultWhite">"- Make a new search"</h4>
+          <h4 id="searchInfo" class="defaultWhite"></h4>
         </div>
 
         <!-- Input form -->
@@ -168,7 +166,7 @@
     <script src="js/jquery.validate.js"></script>
     <script src="js/loadElements.js"></script>
     <script src="js/validateEmailForm.js"></script>
-    <!-- <script src="js/loadSearchBox.js"></script> -->
+    <script src="js/loadSearchBox.js"></script>
     <script src="js/loadResults.js"></script>
   </body>
 </html>
